Added Pivotal logo

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
         <title>GETTING STARTED WITH BRACKETS</title>
         <meta name="description" content="An interactive getting started guide for Brackets.">
         <link rel="stylesheet" href="main.css">
+        <link href='https://d1fto35gcfffzn.cloudfront.net/images/favicon.ico' rel='shortcut icon' type='image/vnd.microsoft.icon'>
     </head>
     <body>
+            </p>
+<div align=center>
+        <a href="screenshots/Pivotal_WhiteOnTeal.png">
+            <img alt="Pivotal" src="screenshots/Pivotal_WhiteOnTeal.png" />
+        </a>
+</div>
+    <p>
         <h1><div align=center>PIVOTAL AT MONEY 20/20</div></h1>        
         <ul>
             <li><h3>Pivotal is proud to sponsor of “Midnight Snack” @ Money2020 Hackathon</h3></li>
